@@ -1,3 +1,8 @@
+2004-04-28  Bruno Haible  <bruno@clisp.org>
+
+	* genclisph.d (main) [TYPECODES]: Emit consp, atomp, mconsp, matomp
+	correctly.
+
 2004-04-13  Bruno Haible  <bruno@clisp.org>
 
 	Make the pointers to the direct subclasses weak.
